[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "imap_box"
version = "0.1.10"
description = "High-resolution map visualization and conversion tool"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "Apache Software License" }
authors = [
    { name = "daohu527", email = "daohu527@gmail.com" }
]
home-page = "https://github.com/daohu527/imap"
keywords = ["imap", "mapping", "visualization"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dynamic = []

[project.urls]
"Bug Tracker" = "https://github.com/daohu527/imap/issues"

[project.dependencies]
protobuf <= "3.19.4"
matplotlib
pyproj
record_msg <= "0.1.1"

[project.scripts]
imap = "imap.main:main"
